fix: add more contrast to `.btn-secondary`

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -147,6 +147,10 @@ button.text-primary {
   @include focus-outline;
 }
 
+.btn-secondary:focus {
+  box-shadow: 0 0 0 .25rem darken($secondary, 15%);
+}
+
 .section-container {
   background-color: white;
   border-radius: $border-radius;
